--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 <link rel="canonical" href="https://taylorh24.github.io/APCSP-TH/" />
 <meta property="og:url" content="https://taylorh24.github.io/APCSP-TH/" />
 <meta property="og:site_name" content="Taylor Henry APCSP" />
-<meta property="og:image" content="https://taylorh24.github.io/APCSP-TH/images/logo.png" />
 <meta property="og:type" content="website" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://taylorh24.github.io/APCSP-TH/images/logo.png" />
+<meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Taylor Henry APCSP" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Taylor is currently studying AP Computer Science Principles.","headline":"Taylor Henry APCSP","image":"https://taylorh24.github.io/APCSP-TH/images/logo.png","name":"Taylor Henry APCSP","url":"https://taylorh24.github.io/APCSP-TH/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Taylor is currently studying AP Computer Science Principles.","headline":"Taylor Henry APCSP","name":"Taylor Henry APCSP","url":"https://taylorh24.github.io/APCSP-TH/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/APCSP-TH/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://taylorh24.github.io/APCSP-TH/feed.xml" title="Taylor Henry APCSP" /><link rel="shortcut icon" type="image/x-icon" href="/APCSP-TH/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -71,13 +69,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
-
-<p><img src="/APCSP-TH/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+        <div class="home"><p>Welcome to Taylor Henry’s APCSP Blog!</p>
 
 <h1 id="posts">Posts</h1>
 
